fix(Repeater) moves array order buttons to summary when collapsed

--- a/src/components/pages/Editor/index.module.sass
+++ b/src/components/pages/Editor/index.module.sass
@@ -25,6 +25,14 @@ $primary-very-light: rgba(0, 149, 130, 0.1)
 		+has-mid-radius
 		margin-bottom: $size-7
 
+		summary
+			[class*="buttons"]
+				display: none
+			&:hover
+				[class*="buttons"]
+					display: flex
+
+
 	.compound-field, [class*="select"] select, input[class*="textarea"], input[class*="input"], button[class*="button"], [class*="ql-toolbar"][class*="ql-toolbar"], [class*="ql-container"]
 		border-color: #a5d7cf
 	input[class*="textarea"], [class*="ql-editor"]
@@ -49,11 +57,6 @@ $primary-very-light: rgba(0, 149, 130, 0.1)
 		// extendeing bulma's .field
 		&:not(:last-child)
 			margin-bottom: $size-75
-
-		.repeatedButton
-			&:hover
-				background-color: $danger
-				color: white
 
 	[class*="label"]
 		font-size: 1rem
