--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -61,3 +61,8 @@ div, section
 .w-1-touch
 	+touch
 		width: 1rem
+
+.has-text-wrap-ellipsis
+	text-overflow: ellipsis
+	white-space: nowrap
+	overflow: hidden
